# decal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
decal/: CMakeLists.txt  decal-all.cpp
decal/algorithm/: floor_power_of_two.h
decal/cmake/: internal_utils.cmake
test/: CMakeLists.txt  decaltest-all.cpp  decaltest.cpp  decaltest.h
test/cmake/: internal_utils.cmake
test/decal/algorithm/: floor_power_of_two.cpp
